--- a/nutz-plugins-apidoc/src/main/resources/org/nutz/plugins/apidoc/index.html
+++ b/nutz-plugins-apidoc/src/main/resources/org/nutz/plugins/apidoc/index.html
@@ -116,6 +116,11 @@ body {
 	display: inline-block;
 	border-radius: 50%;
 }
+
+.btn {
+	font-size: 12px;
+	padding: 2px 12px
+}
 </style>
 </head>
 <body>
@@ -155,43 +160,43 @@ body {
 						<div class="col-xs-6 col-sm-3">
 							<div class="checkbox-inline">
 								<div class="checkbox">
-									<label> <input type="checkbox"  v-model="display_paths"> 路径
+									<label> <input type="checkbox" v-model="display_paths"> 路径
 									</label>
 								</div>
 							</div>
 							<div class="checkbox-inline">
 								<div class="checkbox">
-									<label> <input type="checkbox"  v-model="display_methodName"> 方法名
+									<label> <input type="checkbox" v-model="display_methodName"> 方法名
 									</label>
 								</div>
 							</div>
 							<div class="checkbox-inline">
 								<div class="checkbox">
-									<label> <input type="checkbox"  v-model="display_httpMethods"> Http方法
+									<label> <input type="checkbox" v-model="display_httpMethods"> Http方法
 									</label>
 								</div>
 							</div>
 							<div class="checkbox-inline">
 								<div class="checkbox">
-									<label> <input type="checkbox"  v-model="display_okView"> @OK
+									<label> <input type="checkbox" v-model="display_okView"> @OK
 									</label>
 								</div>
 							</div>
 							<div class="checkbox-inline">
 								<div class="checkbox">
-									<label> <input type="checkbox"  v-model="display_failView"> @Fail
+									<label> <input type="checkbox" v-model="display_failView"> @Fail
 									</label>
 								</div>
 							</div>
 							<div class="checkbox-inline">
 								<div class="checkbox">
-									<label> <input type="checkbox"  v-model="display_filters"> @Filters
+									<label> <input type="checkbox" v-model="display_filters"> @Filters
 									</label>
 								</div>
 							</div>
 							<div class="checkbox-inline">
 								<div class="checkbox">
-									<label> <input type="checkbox"  v-model="display_ops"> 操作
+									<label> <input type="checkbox" v-model="display_ops"> 操作
 									</label>
 								</div>
 							</div>
