--- a/nutz-plugins-apidoc/src/main/resources/org/nutz/plugins/apidoc/index.html
+++ b/nutz-plugins-apidoc/src/main/resources/org/nutz/plugins/apidoc/index.html
@@ -121,6 +121,9 @@ body {
 	font-size: 12px;
 	padding: 2px 12px
 }
+.method-description{
+	font-size: 16px;
+}
 </style>
 </head>
 <body>
@@ -281,7 +284,7 @@ body {
 						<h2 class="sub-header" v-bind:id="info.typeName" :title="info.typeName">{{info.name}}</h2>
 						<div v-for="it in info.methods">
 							<div class="pull-left">
-								<h3>{{info.name}} - {{it.methodName}}</h3>
+								<h3>{{info.name}} - {{it.methodName}}   <span class="method-description">{{it.description}}</span></h3>
 								<button class="btn btn-info" @click="debugCall(it)">调试</button>
 							</div>
 							<div class="clearfix"></div>
