--- a/nutz-plugins-apidoc/src/main/resources/org/nutz/plugins/apidoc/index.html
+++ b/nutz-plugins-apidoc/src/main/resources/org/nutz/plugins/apidoc/index.html
@@ -380,7 +380,7 @@ body {
 							}
 							this.infos_origin = tmp;
 							this.doXXXFilter();
-							if (j.project.title) {
+							if (j.project.name) {
 								document.title = j.project.name;
 								$("#expTitle").html(j.project.name);
 							}
