fix:hasor演示注册中心

--- a/nutz-plugins-apidoc/src/main/resources/org/nutz/plugins/apidoc/index.html
+++ b/nutz-plugins-apidoc/src/main/resources/org/nutz/plugins/apidoc/index.html
@@ -9,6 +9,7 @@
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha256-ZT4HPpdCOt2lvDkXokHuhJfdOKSPFLzeAJik5U/Q+l4="
 	crossorigin="anonymous">
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha256-916EbMg70RQy9LHiGkXzG8hSg9EdNy97GazNG/aiY1w=" crossorigin="anonymous">
+<link rel="icon" href="https://nutz.cn/rs/logo.png" type="image/x-icon"/>
 <style type="text/css">
 /*
  * Base structure
