--- a/nutz-plugins-apidoc/src/main/resources/org/nutz/plugins/apidoc/index.html
+++ b/nutz-plugins-apidoc/src/main/resources/org/nutz/plugins/apidoc/index.html
@@ -346,7 +346,6 @@ body {
 <script src="https://cdn.jsdelivr.net/jquery/3.1.0/jquery.min.js" integrity="sha256-cCueBR6CsyA4/9szpPfrX3s49M9vUU5BgtiJj06wt/s=" crossorigin="anonymous" type="text/javascript"></script>
 <script src="https://cdn.jsdelivr.net/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha256-U5ZEeKfGNOja007MMD3YBI0A3OSZOQbeG6z2f2Y0hu8=" crossorigin="anonymous"
 	type="text/javascript"></script>
-<script src="//cdn.bootcss.com/layer/2.4/layer.min.js" type="text/javascript"></script>
 <script type="text/javascript">
 	var vueApp = new Vue(
 		{
@@ -370,68 +369,10 @@ body {
 				content_path : ""
 			},
 			methods : {
-				showDetail : function(it) {
-					var html = '<h4>参数列表</h4><table class="table table-bordered table-hover table-condensed">\
-										  <thead>\
-									        <tr>\
-									          <th>字段</th>\
-									          <th>类型</th>\
-									          <th>描述</th>\
-									          <th>可选</th>\
-									        </tr>\
-									      </thead>\
-									      <tbody>';
-					for (var index in it.params) {
-						var p = it.params[index];
-						html += '<tr>\
-								          <td>' + p.paramName + '</td>\
-								          <td>' + p.typeName + '</td>\
-								          <td>' + (p.description || '') + '</td>\
-								          <td>' + (p.optional != false) + '</td>\
-								        </tr>';
-					}
-					html += '</tbody> </table>';
-
-					html += '<h4>返回值说明</h4><table class="table table-bordered table-hover table-condensed">\
-										  <thead>\
-									        <tr>\
-									          <th>字段</th>\
-									          <th>描述</th>\
-									        </tr>\
-									      </thead>\
-									      <tbody>';
-					for (var index in it.oks) {
-						var k = it.oks[index];
-						html += '<tr>\
-								          <td>' + k.key + '</td>\
-								          <td>' + k.description + '</td>\
-								        </tr>';
-					}
-					html += '</tbody> </table>';
-
-					html += '<h4>错误码说明</h4><table class="table table-bordered table-hover table-condensed">\
-										  <thead>\
-									        <tr>\
-									          <th>字段</th>\
-									          <th>描述</th>\
-									        </tr>\
-									      </thead>\
-									      <tbody>';
-					for (var index in it.fails) {
-						var k = it.fails[index];
-						html += '<tr>\
-								          <td>' + k.key + '</td>\
-								          <td>' + k.description + '</td>\
-								        </tr>';
-					}
-					html += '</tbody> </table>';
-					layer.open({
-						title : 'Api详情',
-						area : [ '800px', '600px' ],
-						content : html
-					});
+				showDetail:function(it){
+					this.display_mode = "detail",
+					this.path_filter = it.paths[0];
 				},
-
 				debugCall : function(it) {
 					if (!document.getElementById("dhc")) {
 						layer.alert("未安装DHC");
